Fixbug and others.

--- a/TCRB.WEB/Views/Configuration/Components/DragDropDetail.cshtml
+++ b/TCRB.WEB/Views/Configuration/Components/DragDropDetail.cshtml
@@ -53,7 +53,7 @@
                                         <input type="checkbox" v-model="isDraggable" :disabled="IsDragDrop">
                                     </span>
                                 </div>
-                                <input type="text" class="form-control" placeholder="Search" autocomplete="off" v-model="searchQuery" :disabled="IsData" />
+                                <input type="text" class="form-control" placeholder="Search FieldName" autocomplete="off" v-model="searchQuery" :disabled="IsData" />
                             </div>
                         </div>
                     </div>
