--- a/TCRB.WEB/Views/Configuration/Index.cshtml
+++ b/TCRB.WEB/Views/Configuration/Index.cshtml
@@ -205,6 +205,7 @@
                                 if (res.Success) {
                                     self.configuration = _.cloneDeep(self.configurationViewModel);
                                     self.configuration.IsActive = 'true';
+                                    //Reload DataTable.
                                     self.onSubmit();
                                     _toastrSuccess(_Enum.Message.SaveSuccess);
                                     $('#modalTemplateName').modal('hide');
