--- a/TCRB.WEB/Views/Shared/_Layout.cshtml
+++ b/TCRB.WEB/Views/Shared/_Layout.cshtml
@@ -132,7 +132,7 @@
     <environment names="Staging,Production">
         <!-- Base js -->
         <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/vue/vue.js"></script>
+        <script src="~/lib/vue/vue.min.js"></script>
         <script src="~/lib/lodash/core.js"></script>
 
         <!-- Plugins -->
